pagination and nav bars

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,5 @@
-    <footer class="primary-footer bg-dark p-2" >
-      <small class="copyright" style="color:white">&copy; Your name</small>
-    </footer>
+<nav class="navbar fixed-bottom navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#">group name</a>
+  </div>
+</nav>
