Account Page changes

--- a/header.html
+++ b/header.html
@@ -27,7 +27,7 @@
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="logout.php" class="btn btn-danger ml-3">View Your Account</a>
+          <a href="account.php" class="btn btn-danger ml-3">View Your Account</a>
         </li>
         <li>
           <a href="logout.php" class="btn btn-danger ml-3">Sign Out of Your Account</a>
