--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-bottom navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">group name</a>
+    <a class="navbar-brand" href="#">CARHUGE</a>
   </div>
 </nav>
