added finance application

--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
                 <a class="nav-link" href="searchByYear.php">Search By Year</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="welcome.php">Link</a>
+                <a class="nav-link" href="finance.php">Finance Application</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="welcome.php">Link</a>
